--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,13 +15,8 @@
 }
 ::-webkit-scrollbar{
     background: var(--dark);
-    width: 0.8em;
+    width: 0.6em;
     margin: 0 10px;
-}
-::-webkit-scrollbar-track{
-    width: 1em;
-    margin: 0 10em;
-    padding: 1em;
 }
 ::-webkit-scrollbar-thumb{
     background: var(--tag);
@@ -70,9 +65,11 @@ header{
 .toggler i{
     font-size: 1.2em;
     /* background-color: var(--darker); */
+    cursor: pointer;
 }
 .logo{
     width: 7em;
+    cursor: pointer;
 }
 .center_search{
     gap: 1em    ;
@@ -106,6 +103,7 @@ header{
     color: #fff;
     background: var(--darker);
     border: none;
+    cursor: pointer;
 }
 
 .right_icons{
@@ -121,9 +119,11 @@ header{
 .bell_icon i{
     font-size: 1.1em;
     color: #fff;
+    cursor: pointer;
 }
 .avatar{
     width: 2em;
+    cursor: pointer;
 }
 #sidebar{
     width: fit-content;
@@ -157,6 +157,7 @@ header{
     position: fixed;
     left: 4.5em;
     top: 10vh;
+    z-index: 999;
     background: var(--light);
     border-top: 1px solid var(--lighter);
     border-bottom: 1px solid var(--lighter);
@@ -168,6 +169,10 @@ header{
     /* overflow: scroll; */
     width: 100%;
 }
+.tag.all{
+    background: #fff;
+    color: var(--lighter);
+}
 .tag{
     background: var(--tag);
     color: #fff;
@@ -175,4 +180,100 @@ header{
     padding: 0.2em 1em;
     border-radius: 50px;
     border: 1px solid var(--lighter);
+    font-size: 0.9em;
+    cursor: pointer;
+    transition: all 250ms ease;
+}
+.tag:hover{
+    background: #fff;
+    color: var(--tag);
+}
+
+#main{
+    margin: 25vh 0 0 20vh;
+}
+.video_cards_container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2em;
+    padding-bottom: 4em;
+}
+.video{
+    height: 10em;
+    width: 15em;
+    object-fit: cover;
+    position: relative;
+    cursor: pointer;
+}
+.video img{
+    height: 100%;
+    width: 100%;
+}
+.video:hover img{
+    opacity: 0.5;
+}
+.video_icons{
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+    height: 100%;
+    width: fit-content;
+    padding: 5px 5px 5px 0 ;
+}
+
+.clock,.list{
+    padding: 0.1em 0.3em;
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    margin-bottom: 2px;
+    border-radius: 4px;
+    display: none;
+}
+.dur{
+    background: var(--dark);
+    color: #fff;
+    font-size: 0.8em;
+    padding: 0.2em;
+    border-radius: 4px;
+    font-family: var(--font);
+    font-weight: bold;
+}
+.video:hover .clock,
+.video:hover .list{
+    display: block;
+}
+.video:hover .dur{
+    opacity: 0 !important;
+}
+.desc{
+    display: flex;
+    align-items: flex-end;
+    margin-top: 1em;
+    gap: 10px;
+    color: #fff;
+    font-family: var(--font);
+}
+.ch_logo{
+    align-self: flex-start;
+}
+.ch_logo img{
+    width: 2.5em;
+}
+.title{
+    width: 22ch;
+    /* height: 2ch; */
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    margin-bottom: 5px;
+}
+.ch_name,
+.views_time{
+    color: var(--light-text);
+    line-height: 1.2;
+    font-size: 0.95em;
 }
