--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,14 +15,13 @@
 }
 ::-webkit-scrollbar{
     background: var(--dark);
-    width: 0.6em;
-    margin: 0 10px;
+    width: 16px;
 }
 ::-webkit-scrollbar-thumb{
-    background: var(--tag);
+    background: #aaaaaa;
     height: 4em !important;
     border-radius: 80px;
-    margin: 0 10px;
+    border: 4px solid transparent;
     padding: 1em;
     background-clip: padding-box;
 }
@@ -54,7 +53,7 @@ body{
     justify-content: space-between;
     flex-wrap: wrap;
     /* grid-template-columns: repeat(3, 1fr); */
-    margin: 0 2em;
+    margin: 0 1.5em ;
 }
 
 .left_logo{
@@ -65,17 +64,18 @@ body{
     gap: 1em;
     width: 10em;
 }
-.toggler i{
+.toggler i,
+.close_sidebar{
     font-size: 1.2em;
     /* background-color: var(--darker); */
     cursor: pointer;
 }
 .logo{
-    width: 7em;
+    width: 6em;
     cursor: pointer;
 }
 .center_search{
-    gap: 1em    ;
+    gap: 1em   ;
 }
 .search_bar{
     width: 40em;
@@ -127,6 +127,42 @@ body{
 .avatar{
     width: 2em;
     cursor: pointer;
+}
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    transform: scale(0, 1);
+    transform-origin: left;
+}
+#main_sidebar{
+    position: fixed;
+    top: 0;
+    background: var(--side_bg);
+    z-index: 99999;
+    height: 100%;
+    transform: scale(0,1);
+    transform-origin: left;
+    transition: transform 250ms ease-in-out;
+}
+.sidebar_toggler{
+    color: #fff;
+    cursor: pointer;
+    font-size: 1.2em;
+}
+.sidebar_head{
+    display: flex;
+    align-items: center;
+    gap: 3em;
+    padding: 1.3em 3.5em 0.9em 1.7em;
+    border-bottom: 1px solid #2f2f2f;
+}
+.sidebar_logo{
+    width: 6em;
+    /* opacity: 0.4; */
 }
 #sidebar{
     width: fit-content;
@@ -180,7 +216,7 @@ body{
     background: var(--tag);
     color: #fff;
     font-family: var(--font);
-    padding: 0.2em 1em;
+    padding: 0.4em 1em;
     border-radius: 50px;
     border: 1px solid var(--lighter);
     font-size: 0.9em;
@@ -209,7 +245,8 @@ body{
     position: relative;
     cursor: pointer;
 }
-.video img{
+.video img,
+.video video{
     height: 100%;
     width: 100%;
 }
